<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_progress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

  <ProgressBar
      style="@style/Theme.TinyGrip.ProgressBar"
      android:layout_centerInParent="true"/>

</RelativeLayout>
