<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:name="com.tinygrip.android.presentation.view.user.register.UserRegisterFragment"
        android:id="@+id/fragment_user_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>